#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: Fri Dec 10 08:40:56 2010 by William A. Perkins <d3g096@PE10900.pnl.gov>
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(mass1.f90)
AM_INIT_AUTOMAKE(MASS1,0.80)

# -------------------------------------------------------------
# Stuff to include subdirectories
# -------------------------------------------------------------
SUBDIRS="gastemp time_series . scripts"
AC_SUBST(SUBDIRS)

# -------------------------------------------------------------
# Initialization/Defaults
# -------------------------------------------------------------

# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()
AC_PROG_MAKE_SET()
AC_PROG_FC()
AC_PROG_F90()

# -------------------------------------------------------------
# Check perl to see if we do the scripts
# -------------------------------------------------------------
AC_SUBST(POD2MAN)
AC_ARG_VAR(PERLINTERP, [Command to run Perl interpreter])
AC_ARG_VAR(POD2MAN, [Command to convert POD format files to UNIX man format])
AX_SYS_PERLSHARPBANG()
PERL=$PERLINTERP
AC_PROG_PERL_VERSION(5.0.6, CONFIG_PERL=yes, CONFIG_PERL=no)
AC_PROG_PERL_MODULES(Date::Manip, CONFIG_PERL_DATEMANIP=yes, CONFIG_PERL_DATEMANIP=no)
AM_CONDITIONAL(CONFIG_PERL,[test x"$CONFIG_PERL" = xyes])
AM_CONDITIONAL(CONFIG_PERL_DATEMANIP,[test x"$CONFIG_PERL_DATEMANIP" = xyes])

if test x"$CONFIG_PERL" = xyes ; then
    AC_PATH_PROG(POD2MAN,pod2man,pod2man)
fi

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------

# -------------------------------------------------------------
# assemble compiler flags and test
# -------------------------------------------------------------
AC_LANG(Fortran)
                                # search for modules in the
                                # time_series directory

FCFLAGS="$FCFLAGS"
FFLAGS="$FCFLAGS"
LIBS="$LIBS $F90LIBS"

AC_CONFIG_SUBDIRS(time_series)
AC_CONFIG_FILES([
    Makefile
    gastemp/Makefile
    scripts/Makefile
])
AC_OUTPUT()

