#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Copyright (c) 2017 Battelle Memorial Institute
# Licensed under modified BSD License. A copy of this license can be
# found in the LICENSE file in the top level directory of this
# distribution.
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: 2017-06-22 09:19:54 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(MASS1, 0.90)
AM_INIT_AUTOMAKE()
AM_MAINTAINER_MODE()

# -------------------------------------------------------------
# Stuff to include subdirectories
# -------------------------------------------------------------
SUBDIRS="gastemp time_series . scripts"
AC_SUBST(SUBDIRS)

# -------------------------------------------------------------
# Initialization/Defaults
# -------------------------------------------------------------

# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_FC()
AC_FC_MODULE_FLAG()
AC_FC_MODULE_EXTENSION()
AC_PROG_RANLIB()
AC_PROG_LN_S()
AC_PROG_MAKE_SET()
AC_PROG_INSTALL()

# -------------------------------------------------------------
# Check perl to see if we do the scripts
# -------------------------------------------------------------
AC_SUBST(POD2MAN)
AC_ARG_VAR(PERLINTERP, [Command to run Perl interpreter])
AC_ARG_VAR(POD2MAN, [Command to convert POD format files to UNIX man format])
AX_SYS_PERLSHARPBANG()
PERL=$PERLINTERP
AC_PROG_PERL_VERSION(5.0.6, CONFIG_PERL=yes, CONFIG_PERL=no)
AC_PROG_PERL_MODULES(Date::Manip, CONFIG_PERL_DATEMANIP=yes, CONFIG_PERL_DATEMANIP=no)
AM_CONDITIONAL(CONFIG_PERL,[test x"$CONFIG_PERL" = xyes])
AM_CONDITIONAL(CONFIG_PERL_DATEMANIP,[test x"$CONFIG_PERL_DATEMANIP" = xyes])

if test x"$CONFIG_PERL" = xyes ; then
    AC_PATH_PROG(POD2MAN,pod2man,pod2man)
fi

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------

# -------------------------------------------------------------
# assemble compiler flags and test
# -------------------------------------------------------------
AC_LANG(Fortran)
                                # search for modules in the
                                # time_series directory

AC_CONFIG_SUBDIRS(time_series)
AC_CONFIG_FILES([
    Makefile
    gastemp/Makefile
    scripts/Makefile
])
AC_OUTPUT()

