#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: 2017-01-25 06:54:43 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(libts,0.1)
AM_INIT_AUTOMAKE()
AM_MAINTAINER_MODE()

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------
# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_FC()
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()

# -------------------------------------------------------------
# set appropriate flags for specified compiler
# -------------------------------------------------------------

AC_LANG(Fortran)

AC_OUTPUT(Makefile)
